tests/suite/snapshots/suite__check__tests__check__bad-multiarray2.xi.snap
---
source: tests/suite/check.rs
assertion_line: 35
expression: Snapshot(context)
---
Error: Semantic error
   ╭─[tests/check/bad-multiarray2.xi:2:5]
   │
 2 │     x:bool[][] = {true,false}
   ·     ─────┬────  
   ·          ╰────── Expected bool[][] but found bool[]
───╯

